data/forge_javadoc/1.7.10/raw/net/minecraft/world/gen/structure/StructureNetherBridgePieces.Start.md
---
title: "StructureNetherBridgePieces.Start"
description: "public static class StructureNetherBridgePieces.Start extends StructureNetherBridgePieces.Crossing3"
package: "net/minecraft/world/gen/structure"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/gen/structure/StructureNetherBridgePieces.Start.html"
sourceType: javadoc
---

# StructureNetherBridgePieces.Start

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureNetherBridgePieces.Crossing3 → net.minecraft.world.gen.structure.StructureNetherBridgePieces.Start

## Class signature

```java
public static class StructureNetherBridgePieces.Start extends StructureNetherBridgePieces.Crossing3
```

## Constructors

- `Start()`
- `Start(java.util.Random p_i2059_1_, int p_i2059_2_, int p_i2059_3_)`

## Methods

- `protected void func_143011_b(NBTTagCompound p_143011_1_)`
- `protected void func_143012_a(NBTTagCompound p_143012_1_)`
- `protected StructureComponent getNextComponentNormal(StructureNetherBridgePieces.Start p_74963_1_, java.util.List p_74963_2_, java.util.Random p_74963_3_, int p_74963_4_, int p_74963_5_, boolean p_74963_6_)`
- `protected StructureComponent getNextComponentX(StructureNetherBridgePieces.Start p_74961_1_, java.util.List p_74961_2_, java.util.Random p_74961_3_, int p_74961_4_, int p_74961_5_, boolean p_74961_6_)`
- `protected StructureComponent getNextComponentZ(StructureNetherBridgePieces.Start p_74965_1_, java.util.List p_74965_2_, java.util.Random p_74965_3_, int p_74965_4_, int p_74965_5_, boolean p_74965_6_)`
- `protected static boolean isAboveGround(StructureBoundingBox p_74964_0_)`

## Fields

- `protected static WeightedRandomChestContent [] field_111019_a`
- `java.util.ArrayList field_74967_d`
- `java.util.List primaryWeights`
- `java.util.List secondaryWeights`
- `net.minecraft.world.gen.structure.StructureNetherBridgePieces.PieceWeight theNetherBridgePieceWeight`
